[package]
name = "market-place"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mysql = "*"
dotenv = "*"
actix-cors = "0.6.4"
actix-files = "0.6.2"
actix-web = "4.2.1"
chrono = { version = "0.4.23", features = ["serde"] }
env_logger = "0.10.0"
jsonwebtoken = "8.2.0" # create and parses JWT
reqwest = { version = "0.11.14", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
uuid = { version = "1.2.2", features = ["v4"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-native-tls", "mysql", "time"] }
tracing-actix-web = "0.7.7"
tracing = "0.1.37"
anyhow = "1.0.75"
tracing-subscriber = "0.3.17"
thiserror = "1.0.49"
actix-http = "3.4.0"
