[package]
name = "marketplace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.2.1"
actix = "0.13"
actix-web-actors = "4.2.0"
chrono = { version = "0.4.23", features = ["serde"] }
jsonwebtoken = "8.2.0" # create and parses JWT
reqwest = { version = "0.11.14", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "tls-native-tls",
    "time",
    "chrono",
    "postgres",
] }
tracing-actix-web = "0.7.7"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
thiserror = "1.0.49"
actix-http = "3.4.0"
tokio = { version = "1.33.0", features = ["rt-multi-thread"] }
dotenv = "0.15.0"
aws-config = "0.57.1"
aws-sdk-s3 = "0.35.0"
actix-multipart = "0.6.1"
tonic = "0.10.2"
prost = "0.12.3"
futures-util = "0.3.30"
prost-types = "0.12.3"

[build-dependencies]
tonic-build = "0.10.2"

[dependencies.uuid]
version = "1.5.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
